<resources>
    <string name="app_name">Android_calory_cal</string>
    <string name="you_got">You got</string>

    <string name="material_calendar_monday">Mon</string>
    <string name="material_calendar_tuesday">Tue</string>
    <string name="material_calendar_wednesday">Wed</string>
    <string name="material_calendar_thursday">Thu</string>
    <string name="material_calendar_friday">Fri</string>
    <string name="material_calendar_saturday">Sat</string>
    <string name="material_calendar_sunday">Sun</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="you_lost">You lost</string>
    <string name="empty">___</string>
    <string name="cal">cal</string>
    <string name="input_new_food">Input new food</string>
    <string name="input_new_exercise">Input new Exercise</string>
    <string name="choose_from_list">Choose from list</string>
    <string name="exercise">Exercise :</string>
    <string name="lost_calories_10mins">Lost Calories(10mins) :</string>
    <string name="calories_per_100g">Calories per 100g :</string>
    <string name="history">History</string>
    <string name="choose_date">Choose date</string>

    <string name="cal_today">Cal today</string>
    <string name="cal_in_a_day">Cal in a day</string>
    <string name="you_now_get">You now get</string>
    <string name="kg">Kg</string>
    <string name="enter_the_weight_you_hope">Enter the weight you hope</string>
    <string name="move">Move</string>
    <string name="eat">Eat</string>
    <string name="record">Record</string>
    <string name="_1_calculate">1. Calculate</string>
    <string name="_2_add_to_histry">2. Add to history</string>



</resources>
